--- a/style.css
+++ b/style.css
@@ -214,6 +214,18 @@ h1 {
 	transition: background-color 1s;
 }
 
+
+.d1x1 a:hover{
+    color:#FF0000;
+    text-decoration: underline;
+	text-shadow: 1px 1px 2px red;
+   }
+   
+ .d1x1 h1:hover{
+    color:#F0FFFF;
+     text-shadow: 2px 2px 5px red;
+   }
+
 .d2x1 {
 	float: left;
 	width: 390px;
